fixed scroll overflow

--- a/todo list/style.css
+++ b/todo list/style.css
@@ -11,6 +11,7 @@ body, input, button {
 .main {
   margin: auto;
   width: 600px;
+  overflow: auto;
 }
 
 header {
